Add dependent: :destroy to generator README (#248)

--- a/lib/generators/noticed/templates/README
+++ b/lib/generators/noticed/templates/README
@@ -3,5 +3,5 @@
 
 Next steps:
 1. Run "rails db:migrate"
-2. Add "has_many :notifications, as: :recipient" to your User model(s).
+2. Add "has_many :notifications, as: :recipient, dependent: :destroy" to your User model(s).
 3. Generate notifications with "rails g noticed:notification"
